# GraphRapping

./: .env.example  .gitignore  07_feedback_on_v2_plan_ko.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  PROJECT_OVERVIEW_KO.md  README.md  pyproject.toml
DECISIONS/: 2026-03-27_implementation_plan_v4_final.md  2026-03-28_implementation_completion_report.md  2026-03-28_post_audit_fix_plan_v4_approved.md  2026-03-28_sprint4_hotfix_plan_v3_approved.md  2026-03-28_sprint4_plan_v6_approved.md  2026-03-29_source_integration_plan_v4_approved.md  2026-03-30_kg_port_plan_draft.md  2026-03-30_kg_port_plan_final_approved.md  2026-03-30_kg_review_fix_plan_approved.md  2026-04-08_bee_target_attribution_gate_plan.md  2026-04-09_status_review_and_next_phase.md  2026-04-10_audit_fix_plan.md  2026-04-10_concern_context_connection_plan.md  2026-04-25_audit_priority_execution_roadmap.md  2026-04-25_ci_quality_gate_plan.md  2026-04-25_docker_postgres_integration_execution_plan.md  2026-04-25_documentation_sync_report.md  2026-04-25_global_lint_cleanup_plan.md  2026-04-25_mypy_type_stability_plan.md  2026-04-25_p0_1_product_match_data_contract_plan.md  2026-04-25_p0_2_quarantine_batch_web_summary_plan.md  2026-04-25_p0_3_operational_db_incremental_correctness_plan.md  2026-04-25_p1_1_serving_sql_contract_sync_plan.md  2026-04-25_p1_2_rs_jsonl_relation_ready_contract_plan.md  2026-04-25_p1_3_promotion_metadata_propagation_plan.md  2026-04-25_p2_1_recommendation_scoring_docs_consistency_plan.md  2026-04-25_postgres_integration_verification_plan.md  2026-06-15_source_grounded_product_contract_plan.md  2026-06-15_source_id_matching_baseline_update.md  2026-06-17_final_906_review_baseline_cleanup.md  2026-06-17_product_source_identity_amoresim_integration.md  2026-06-17_review_summary_sidecar_final_output.md  2026-06-17_source_grounded_fixture_loader_contract.md  2026-06-18_source_review_stats_wiring_fix.md  2026-06-19_evidence_first_personalization_recommendation.md  2026-06-19_recommendation_tester_category_tabs.md  2026-06-22_dense_golden_fixture_and_semantic_evidence_matching.md  2026-06-22_kg_on_source_backed_keyword_repair.md  2026-06-22_recommendation_master_graph_evidence_usage_repair.md  2026-06-22_scoped_user_preference_projection.md  (+18 more)
ERR_HIST/: 2026-06-15_1730_incremental_cleanup_fake_uow_fixture.md  2026-06-17_1550_source_grounded_fixture_legacy_contract.md
FUTURE/: action_intent_industry_academia_brief_ko.md  action_intent_model_training_report_reframed_v3_ko.md  action_intent_overlay_architecture_plan_reframed_v3_ko.md  stable_profile_plus_action_overlay_design_instruction_v3_ko.md
PLAN/: 01_final_project_handoff_v2_ko.md  02_project_overview_goals_v2_ko.md  03_claude_code_implementation_spec_v2_ko.md  04_layer_mapping_appendix_v2_ko.md  05_relation_wrapping_mapping_v2.csv  (+9 more)
(+387 files in other folders)
