[project]
name = "graphrapping"
version = "0.1.0"
description = "Beauty product semantic signal graph: review NER/BEE/REL → canonical facts → serving signals → recommendation"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# P6-2 (Wave 3.7): 30s default timeout prevents hangs in async/network tests.
# Individual tests can opt out via `@pytest.mark.timeout(0)` or override.
timeout = 30
timeout_method = "thread"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true
